--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "gsap": "^3.12.3",
     "icons": "^1.0.0",
     "next": "14.0.4",
