--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "gsap": "^3.12.3",
     "icons": "^1.0.0",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18",
