--- a/package.json
+++ b/package.json
@@ -2,4 +2,9 @@
   "dependencies": {
     "axios": "^1.6.2"
   }
-}
+,
+"scripts": {
+  "frontend": "cd frontend && npm run dev",
+  "backend":"cd backend && npm start"
+}}
+
