--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.1",
     "@uploadthing/react": "^6.0.2",
     "axios": "^1.6.2",
     "cloudinary": "^1.41.1",
