--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-toastify": "^9.1.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
