--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@uploadthing/react": "^6.0.2",
     "axios": "^1.6.2",
     "cloudinary": "^1.41.1",
+    "dotenv": "^16.4.5",
     "gsap": "^3.12.3",
     "icons": "^1.0.0",
     "lodash": "^4.17.21",
