--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   }
 }
