--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "dependencies": {
-    "axios": "^1.6.2"
-  },
   "scripts": {
     "frontend": "cd frontend && npm run dev",
-    "backend": "cd backend && npm start"
+    "backend": "cd backend && npm start",
+    "start": "start cmd /K npm run frontend && start cmd /K npm run backend"
   }
 }
